--- a/app/src/main/res/layout/activity_show_part_gallery.xml
+++ b/app/src/main/res/layout/activity_show_part_gallery.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.qualcomm.vuforia.samples.VuforiaSamples.app.ImageTargets.ShowPartGallery">
 
     <LinearLayout
@@ -52,7 +53,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/settingsImage"
+                android:id="@+id/partImage"
                 android:layout_below="@+id/settingsTitle"
                 android:paddingTop="10dp"
                 android:layout_centerHorizontal="true" />
@@ -64,7 +65,7 @@
                 android:text="Medium Text"
                 android:id="@+id/settingsText"
                 android:gravity="center"
-                android:layout_below="@+id/settingsImage"
+                android:layout_below="@+id/partImage"
                 android:paddingTop="20dp"
                 android:layout_centerHorizontal="true" />
 
