--- a/app/src/main/res/drawable/button_custom.xml
+++ b/app/src/main/res/drawable/button_custom.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/buttonredpressed"
+    <item
+        android:state_enabled="false"
+        android:drawable="@drawable/buttonreddisabledtwo" />
+    <item android:drawable="@drawable/buttonreddefaulttwo"
         android:state_pressed="true" />
-    <item android:drawable="@drawable/buttonredpressed"
+    <item android:drawable="@drawable/buttonreddefaulttwo"
         android:state_focused="true" />
-    <item android:drawable="@drawable/buttonreddefault" />
+    <item android:drawable="@drawable/buttonredpressedtwo" />
 </selector>
